--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-api-cache": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1"
   },
