--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node dist/server.js",
     "dev": "nodemon src/server.ts",
     "build": "tsc -p .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose"
   },
   "author": "",
   "license": "ISC",
@@ -23,11 +23,16 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.14",
+    "@types/jest": "^29.2.3",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/mysql": "^2.15.21",
     "@types/node": "^18.11.9",
+    "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.4",
+    "jest": "^29.3.1",
     "nodemon": "^2.0.20",
+    "supertest": "^6.3.1",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1"
   }
 }
