--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node dist/server.js",
     "dev": "nodemon src/server.ts",
     "build": "tsc -p .",
+    "postinstall": "tsc",
     "test": "jest --verbose"
   },
   "author": "",
